ultimo commit/ Fim do Projeto DOOM!

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/doom.css">
     <title>Saturn</title>
 </head>
 <body>
@@ -20,16 +21,27 @@
           </div>
       
         <ul class="bm-ul">
-            <li class="li"><a href="">Início</a></li>
-            <li class="li"><a href="">GitHub</a></li>
-            <li class="li"><a href="">Linkedin</a></li>
+            <li class="li"><a href="" class="am">Início</a></li>
+            <li class="li"><a href="" class="am">GitHub</a></li>
+            <li class="li"><a href="" class="am">Linkedin</a></li>
         </ul>
     </header>
+    <div class="o">
+<main>
+    <div id="fireCanvas"></div>
+    <div class="margin">
+      <button onclick="destroyFireSource()" class="minimo">Minimo de fogo</button>
+      <button onclick="createFireSource()" class="Maximo">Maximo de Fogo</button>
+      
+    </div>
+      <script src="/js/Doom.js"></script>
+
+    </main>
+</div>
 </body>
 </html>
 
 
-<main class="princ">
 
-</main>
+
 
