--- a/home.html
+++ b/home.html
@@ -21,9 +21,8 @@
           </div>
       
         <ul class="bm-ul">
-            <li class="li"><a href="" class="am">Início</a></li>
-            <li class="li"><a href="" class="am">GitHub</a></li>
-            <li class="li"><a href="" class="am">Linkedin</a></li>
+            <li class="li"><a href="https://github.com/EduardoSpindolaAlves/" class="am">GitHub</a></li>
+            <li class="li"><a href="https://www.linkedin.com/in/luis-eduardo-64ba12223/" class="am">Linkedin</a></li>
         </ul>
     </header>
     <div class="o">
